fix display image on mobile

--- a/src/Component/StartWith/style.css
+++ b/src/Component/StartWith/style.css
@@ -32,6 +32,12 @@
     width: 250px;
 } 
 
+@media (max-width: 575.98px) { 
+    .start-with-img {
+        display: none;
+    }
+ }
+
 @media (max-width: 767.98px) { 
     .start-with-img {
         z-index: -1;
